src/test/deca/test_compilateur/context/valid/created/exp_bin/op_comp/eq.deca
// Description :
//    test eq 
//
// Resultats :
//		Ok

{
int a;
float b;
boolean d;
boolean c = 1 == 2;
c = 0.5 == 2;
c = 1 == 0.2;
c = 0.1 == 0.1;
c = a == 2;
c = a == 0.2;
c = 2 == a;
c = 0.2 == a;
c = a == a;
c = b == 2;
c = b == 0.2;
c = 2 == b;
c = 0.2 == b;
c = b == b;
c = a == b;
}
