src/test/deca/test_compilateur/context/invalid/created/binary_exp/op_comp/neq_A_boolean.deca
// Description :
//    test neq entre un A et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) Opérandes de type A, boolean, attendu: (int|float, int|float) ou (class|null, class|null) ou (bool, bool)
class A{}
{
A a;
boolean b;
boolean c = a != b;
}
